More progress + nasty JDK-specific bug
Running with zulu JDK 17 summons a nasty creature of a bug. Seems
  maybe related to compiling on JDK 21 with release 17.